# minesweeper-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: audit.yml  build.yml
bindings/: Cargo.toml  build.rs
src/: grid.rs  gui.rs  main.rs  minesweeper.rs
