[package]
name = "minesweeper-rs"
version = "0.1.0"
authors = ["Chris Ohk <utilforever@gmail.com>"]
edition = "2018"
description = "A simple minesweeper game using Rust and windows-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.18.0"
bindings = { path = "bindings" }
winit = "0.25.0"
raw-window-handle = "0.3.3"